<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:ems="10"
        android:inputType="textPersonName" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <ImageView
            android:id="@+id/imageViewSale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/guitar_sale"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/guitar_sale" />

        <TextView
            android:id="@+id/textViewSale"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/aclonica"
            android:rotation="-20"
            android:text="@string/sale_30"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>
    <TextView
        android:id="@+id/labelSelectItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/select_item"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />
    <ImageView
        android:id="@+id/goodsImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/one_item"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/guitar" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labelOrderPrice"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:text="@string/order_price"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                />

            <TextView
                android:id="@+id/orderTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelOrderPrice"
                android:layout_centerHorizontal="true"
                android:text="@string/empty"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelOrderPrice"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/orderTotal"
                android:text="@string/currency"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/labelQuantity"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:text="@string/quantity"
                android:textColor="@android:color/black"
                android:paddingBottom="5dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_toStartOf="@id/countItems"
                android:background="@color/colorPrimaryDark"
                android:text="@string/sub"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:onClick="decreaseQuantity"/>

            <TextView
                android:id="@+id/countItems"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_below="@id/labelQuantity"
                android:layout_centerHorizontal="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/cnt_items"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_toEndOf="@id/countItems"
                android:background="@color/colorPrimaryDark"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:onClick="increaseQuantity"/>


        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_to_cart"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"/>

</LinearLayout>